@@ -2,7 +2,7 @@ package com.gavoza.backend.global.jwt;
 
 import io.jsonwebtoken.*;
 import io.jsonwebtoken.security.Keys;
-import jakarta.annotation.PostConstruct;
+import io.jsonwebtoken.security.SignatureException;
 import jakarta.servlet.http.HttpServletRequest;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -10,53 +10,42 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.security.Key;
 import java.util.Base64;
 import java.util.Date;
 
 @Component
 public class JwtUtil {
-    //jwt데이터
+    //토큰 데이터
     public static final String AUTHORIZATION_HEADER = "Authorization";
-
-//    public static final String AUTHORIZATION_KEY = "auth";
     public static final String BEARER_PREFIX = "Bearer ";
     private final long TOKEN_TIME = 60 * 60 * 1000L;
 
     @Value("${jwt.secret.key}")
-    private String secretKey;
-    private Key key;
-    private final SignatureAlgorithm signatureAlgorithm = SignatureAlgorithm.HS256;
-    public static final Logger logger = LoggerFactory.getLogger("JWT 관련 로그");
-
-    @PostConstruct
-    public void init() {
-        byte[] bytes = Base64.getDecoder().decode(secretKey);
-        key = Keys.hmacShaKeyFor(bytes);
+    private void setSecretKey(String secretKey) {
+        this.key = Keys.hmacShaKeyFor(Base64.getDecoder().decode(secretKey));
     }
 
-    // jwt생성
+    private Key key;
+    private final SignatureAlgorithm signatureAlgorithm = SignatureAlgorithm.HS256;
+    private static final Logger logger = LoggerFactory.getLogger("JWT 관련 로그");
+
+    //토큰생성
     public String createToken(String email) {
         Date date = new Date();
 
         return BEARER_PREFIX +
                 Jwts.builder()
-                        .setSubject(email) // 사용자 식별자값(ID)
-//                        .claim(AUTHORIZATION_KEY) // 사용자 권한
-                        .setExpiration(new Date(date.getTime() + TOKEN_TIME)) // 만료 시간
-                        .setIssuedAt(date) // 발급일
-                        .signWith(key, signatureAlgorithm) // 암호화 알고리즘
+                        .setSubject(email) //식별자값(ID)
+                        .setExpiration(new Date(date.getTime() + TOKEN_TIME)) //만료시간
+                        .setIssuedAt(date) //발급일
+                        .signWith(key, signatureAlgorithm) //암호화 알고리즘
                         .compact();
     }
 
-//    // JWT 헤더에 저장
-//    public void addJwtToHeader(String token, HttpServletResponse res) {
-//        res.addHeader(AUTHORIZATION_HEADER, BEARER_PREFIX + token);
-//    }
-
-    // JWT 토큰 substring
+    //토큰 substring
     public String substringToken(String tokenValue) {
         if (StringUtils.hasText(tokenValue) && tokenValue.startsWith(BEARER_PREFIX)) {
             return tokenValue.substring(7);
@@ -65,7 +54,7 @@ public class JwtUtil {
         throw new NullPointerException("토큰을 찾을 수 없습니다.");
     }
 
-    // 토큰 검증
+    //토큰 validate
     public boolean validateToken(String token) {
         try {
             Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token);
@@ -82,21 +71,22 @@ public class JwtUtil {
         return false;
     }
 
-// 토큰에서 사용자 정보 가져오기
+    // 토큰에서 사용자 정보 가져오기
     public Claims getUserInfoFromToken(String token) {
         return Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token).getBody();
     }
-
+    //헤더에서 토큰 가져오기
     public String getTokenFromRequest(HttpServletRequest req) {
         String tokenValue = req.getHeader(AUTHORIZATION_HEADER);
         if (tokenValue != null && !tokenValue.isEmpty()) {
-            try {
-                return URLDecoder.decode(tokenValue, "UTF-8"); // Encode 되어 넘어간 Value 다시 Decode
-            } catch (UnsupportedEncodingException e) {
-                return null;
-            }
+            return URLDecoder.decode(tokenValue, StandardCharsets.UTF_8);
         }
         return null;
     }
+    //토큰생성
+    public String createAccessToken(String email) {
+        return createToken(email);
 
     }
+
+}
